<resources>
    <!-- TECHNICAL ITEMS -->
    <string name="app_name">PunWars</string>
    <string name="facebook_app_id">530734863765480</string>
    <string name="parse_app_id">2ecdb6a0-82a8-4ed3-82dd-f15d048adea5</string>
    <string name="parse_client_id">i4fKI1z1ofOHQVmfPjfZMxHc9Ji1yRFK</string>
    <string name="parse_server_url">https://api.parse.buddy.com/parse/</string>
    <string name="instabug_app_id">fc940c3486484d19d88fbb651b3464c3</string>

    <!-- BUTTONS -->
    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="home">Lobby</string>
    <string name="addfriend">Add Friend</string>
    <string name="removefriend">Remove Friend</string>
    <string name="removerequest">Remove Request</string>
    <string name="acceptrequest">Accept Request</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="add_lobby">Add theme</string>
    <string name="add_pun">Add pun</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit_prompt">Submit Prompt</string>
    <string name="submit_pun">Submit Pun</string>
    <string name="submit_newname">Submit Name</string>
    <string name="submit_newpicture">Select Picture</string>
    <string name="submit_defaultpicture">Select Facebook Picture</string>

    <!-- LABELS -->
    <string name="hintName">Type New Name Here</string>
    <string name="prompt">Enter your prompt</string>
    <string name="enter_pun">Enter your pun</string>
    <string name="desc">Describe your theme</string>
    <string name="name">Name</string>
    <string name="pts">N pts</string>
    <string name="rnk">Rank: </string>
    <string name="themes">Themes: </string>
    <string name="puns">Puns: </string>
    <string name="topPuns">Top Puns: </string>
    <string name="cancel">Cancel</string>
    <string name="linkpp">Privacy Policy</string>
    <string name="settingschangename">Change Name</string>
    <string name="settingschangeprofilepic">Change Profile Picture</string>
    <string name="settingsdeleteaccount">Delete Profile</string>
    <string name="noitems">No More Items</string>
    <string name="loading">Loading Items</string>
    <string-array name="spinner_array">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>

    <!-- LIMITS -->
    <string name="PUN_LIMIT">140</string>
    <string name="TITLE_LIMIT">20</string>
    <string name="DESC_LIMIT">140</string>
    <string name="U_LIMIT">16</string>
</resources>
