<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Profile">
    <item
        android:title="@string/home"
        android:id="@+id/lobby_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:onClick="goToLobby"/>
    <item
        android:title="@string/settings"
        android:id="@+id/setting_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:onClick="goToSettings" />
    <item
        android:title="@string/leaderboard"
        android:id="@+id/leaderboard_settings"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:onClick="goToLeaderboard" />
    <item
        android:title="@string/log_out"
        android:id="@+id/logout_settings"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:onClick="logOut"/>
    <item
        android:title="@string/addfriend"
        android:id="@+id/addfriend_settings"
        android:orderInCategory="500"
        app:showAsAction="ifRoom"
        android:onClick="sendFriendRequest" />
    <item
        android:title="@string/removefriend"
        android:id="@+id/removefriend_settings"
        android:orderInCategory="600"
        app:showAsAction="ifRoom"
        android:onClick="removeFriend"
        android:visible="false"/>
    <item
        android:title="@string/removerequest"
        android:id="@+id/removerequest_settings"
        android:orderInCategory="700"
        app:showAsAction="ifRoom"
        android:onClick="removeRequest"
        android:visible="false" />
</menu>