<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Lobby">

    <item
        android:title="@string/profile"
        android:id="@+id/profile_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:onClick="goToProfile"/>
    <item
        android:title="@string/log_out"
        android:id="@+id/logout_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:onClick="logOut"/>
    <item
        android:id="@+id/addTheme_settings"
        android:orderInCategory="300"
        android:title="@string/add_lobby"
        app:showAsAction="ifRoom"
        android:onClick="addAPrompt"/>
</menu>