<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>

    <Button
        android:id="@+id/settingspp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/linkpp"
        android:onClick="goToPrivacyPolicy"/>

    <Button
        android:id="@+id/settingschangename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/settingschangename"
        android:onClick="goToChangeName" />

    <Button
        android:id="@+id/settingschangeprofilepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/settingschangeprofilepic"
        android:onClick="goToChangeProfilePic"/>

    <Button
        android:id="@+id/deleteaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/settingsdeleteaccount"
        android:onClick="deleteAccount"/>


</LinearLayout>
