<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"/>
    
    <watson.punwarz.ListView.VerticalScrollview
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <watson.punwarz.ImageView.RoundedImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profilePic"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/points"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pts"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rank"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rnk"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/puns"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/puns"
                    android:layout_marginTop="5dp"/>

                <ProgressBar
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/punProgressBar"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:visibility="visible"
                    />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:paddingBottom="10dp">
                <ListView
                    android:id="@+id/user_puns_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </ScrollView>

            <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/themes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/themes"
        android:layout_marginTop="5dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/themeProgressBar"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="3dp"
        android:visibility="visible"
        />

</LinearLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="15dp">
    <ListView
        android:id="@+id/user_themes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topPuns"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/topPuns"
            android:layout_marginTop="5dp"/>

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topPunProgressBar"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:visibility="visible"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:paddingBottom="10dp">
        <ListView
            android:id="@+id/user_topPuns_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </ScrollView>
        </LinearLayout>
    </watson.punwarz.ListView.VerticalScrollview>

</LinearLayout>